More work on refactoring code into namespaces as the codebase grows

--- a/MultiMiner.Coin.Api/MultiMiner.Coin.Api.csproj
+++ b/MultiMiner.Coin.Api/MultiMiner.Coin.Api.csproj
@@ -43,7 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CoinApiException.cs" />
-    <Compile Include="CoinInformation.cs" />
+    <Compile Include="Data\CoinInformation.cs" />
     <Compile Include="IApiContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
