--- a/MultiMiner.MobileMiner.Api/MultiMiner.MobileMiner.Api.csproj
+++ b/MultiMiner.MobileMiner.Api/MultiMiner.MobileMiner.Api.csproj
@@ -43,10 +43,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApiContext.cs" />
-    <Compile Include="InputValidation.cs" />
-    <Compile Include="MiningStatistics.cs" />
+    <Compile Include="Helpers\InputValidation.cs" />
+    <Compile Include="Data\MiningStatistics.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RemoteCommand.cs" />
+    <Compile Include="Data\RemoteCommand.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
