--- a/MultiMiner.Engine/MultiMiner.Engine.csproj
+++ b/MultiMiner.Engine/MultiMiner.Engine.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Data\Configuration\Device.cs" />
     <Compile Include="Data\Configuration\Engine.cs" />
     <Compile Include="Data\Configuration\Xgminer.cs" />
+    <Compile Include="Data\KnownCoins.cs" />
     <Compile Include="Helpers\DonationPools.cs" />
     <Compile Include="Installer.cs" />
     <Compile Include="LogProcessCloseArgs.cs" />
