Refactoring DevicesListView into a more general control

--- a/MultiMiner.Win/MultiMiner.Win.csproj
+++ b/MultiMiner.Win/MultiMiner.Win.csproj
@@ -78,11 +78,11 @@
     <Compile Include="Controls\DetailsControl.Designer.cs">
       <DependentUpon>DetailsControl.cs</DependentUpon>
     </Compile>
-    <Compile Include="Controls\DeviceListView.cs">
+    <Compile Include="Controls\ListViewEx.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Controls\DeviceListView.Designer.cs">
-      <DependentUpon>DeviceListView.cs</DependentUpon>
+    <Compile Include="Controls\ListViewEx.Designer.cs">
+      <DependentUpon>ListViewEx.cs</DependentUpon>
     </Compile>
     <Compile Include="Extensions\IPEndPointExtensions.cs" />
     <Compile Include="Extensions\NetworkDeviceExtensions.cs" />
