Refactoring - pushing CoinSuggestionsAlgorithm out to MultiMiner.Engine

--- a/MultiMiner.Engine/MultiMiner.Engine.csproj
+++ b/MultiMiner.Engine/MultiMiner.Engine.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationPaths.cs" />
+    <Compile Include="Data\CoinSuggestionsAlgorithm.cs" />
     <Compile Include="Data\Configuration\Coin.cs" />
     <Compile Include="Data\Configuration\Strategy.cs" />
     <Compile Include="Data\CryptoCoin.cs" />
