Introduce an installer for the Darkcoin X11 build of SGMiner

--- a/MultiMiner.Xgminer/MultiMiner.Xgminer.csproj
+++ b/MultiMiner.Xgminer/MultiMiner.Xgminer.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Data\Device\DevicePlatform.cs" />
     <Compile Include="Installer\BaseInstaller.cs" />
     <Compile Include="Installer\BFGMinerInstaller.cs" />
+    <Compile Include="Installer\DarkcoinSGMinerInstaller.cs" />
     <Compile Include="Installer\IMinerInstaller.cs" />
     <Compile Include="Installer\KalrothSJCGMinerInstaller.cs" />
     <Compile Include="Installer\VertminerInstaller.cs" />
