--- a/MultiMiner.Win/MultiMiner.Win.csproj
+++ b/MultiMiner.Win/MultiMiner.Win.csproj
@@ -87,6 +87,12 @@
     <Compile Include="Controls\InstancesControl.Designer.cs">
       <DependentUpon>InstancesControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Configuration\GPUMinerSettingsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Configuration\GPUMinerSettingsForm.Designer.cs">
+      <DependentUpon>GPUMinerSettingsForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Configuration\MinerSettingsForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -195,6 +201,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\InstancesControl.resx">
       <DependentUpon>InstancesControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Configuration\GPUMinerSettingsForm.resx">
+      <DependentUpon>GPUMinerSettingsForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Configuration\MinerSettingsForm.resx">
       <DependentUpon>MinerSettingsForm.cs</DependentUpon>
@@ -348,6 +357,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="MultiMiner.ico" />
+    <None Include="Resources\hardware-option.png" />
     <None Include="Resources\clipboard_copy.png" />
     <None Include="Resources\computer-control_play.png" />
     <None Include="Resources\computer-control_stop.png" />
