--- a/MultiMiner.Engine/MultiMiner.Engine.csproj
+++ b/MultiMiner.Engine/MultiMiner.Engine.csproj
@@ -33,6 +33,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Newtonsoft.Json\net35\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -53,9 +57,12 @@
     <Compile Include="Data\Configuration\Xgminer.cs" />
     <Compile Include="Data\KnownCoins.cs" />
     <Compile Include="Helpers\DonationPools.cs" />
-    <Compile Include="Installer.cs" />
+    <Compile Include="Installers\MultiMinerInstaller.cs" />
+    <Compile Include="Data\AvailableMiner.cs" />
+    <Compile Include="Installers\AvailableMiners.cs" />
+    <Compile Include="Installers\MinerInstaller.cs" />
     <Compile Include="LogProcessCloseArgs.cs" />
-    <Compile Include="MinerDescriptor.cs" />
+    <Compile Include="Data\MinerDescriptor.cs" />
     <Compile Include="MinerFactory.cs" />
     <Compile Include="MinerPath.cs" />
     <Compile Include="MinerProcess.cs" />
