Add an Algorithm combo box to the Choose Coin dialog

--- a/MultiMiner.Win/MultiMiner.Win.csproj
+++ b/MultiMiner.Win/MultiMiner.Win.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Data\Configuration\Metadata.cs" />
     <Compile Include="Extensions\ApplicationConfigurationExtensions.cs" />
     <Compile Include="Extensions\AssemblyExtensions.cs" />
+    <Compile Include="Extensions\CoinAlgorithmExtensions.cs" />
     <Compile Include="Extensions\DeviceConfigurationExtensions.cs" />
     <Compile Include="Extensions\EngineConfigurationExtensions.cs" />
     <Compile Include="Extensions\XgminerConfigurationExtensions.cs" />
