--- a/MultiMiner.Remoting/MultiMiner.Remoting.csproj
+++ b/MultiMiner.Remoting/MultiMiner.Remoting.csproj
@@ -35,6 +35,7 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
