--- a/MultiMiner.Xgminer.Api.Client/MultiMiner.Xgminer.Api.Client.csproj
+++ b/MultiMiner.Xgminer.Api.Client/MultiMiner.Xgminer.Api.Client.csproj
@@ -37,6 +37,7 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
