--- a/MultiMiner.Win/MultiMiner.Win.csproj
+++ b/MultiMiner.Win/MultiMiner.Win.csproj
@@ -359,6 +359,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="MultiMiner.ico" />
+    <None Include="Resources\help1.png" />
     <None Include="Resources\application-help.png" />
     <None Include="Resources\mail-key.png" />
     <None Include="Resources\application-internet.png" />
