Introduce a connect timeout for RPC API TCP clients

--- a/MultiMiner.Xgminer.Api/MultiMiner.Xgminer.Api.csproj
+++ b/MultiMiner.Xgminer.Api/MultiMiner.Xgminer.Api.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Data\NetworkCoinInformation.cs" />
     <Compile Include="Data\VersionInformation.cs" />
     <Compile Include="Extensions\IntegerExtensions.cs" />
+    <Compile Include="Extensions\TcpClientExtensions.cs" />
     <Compile Include="Parsers\NetworkCoinInformationParser.cs" />
     <Compile Include="Parsers\DeviceDetailsParser.cs" />
     <Compile Include="Parsers\PoolInformationParser.cs" />
