Save and kill known owned processes to release inherited socket handles

--- a/MultiMiner.Utility/MultiMiner.Utility.csproj
+++ b/MultiMiner.Utility/MultiMiner.Utility.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Net\ApiWebClient.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="OS\OwnedProcesses.cs" />
     <Compile Include="OS\StartupShortcut.cs" />
     <Compile Include="Serialization\ConfigurationReaderWriter.cs" />
     <Compile Include="IO\FileCopier.cs" />
